# HUST_Test

./: .gitignore  README.md  cmd.txt  testlog.py
Dockerfile/: Dockerfile.ci_gpu  Dockerfile.mytvm  Dockerfile.tvm  Dockerfile.tvm-v0.7.0  install_reef_tvm_gpu.sh  install_tvm_gpu.sh  install_tvm_gpu_v0.7.0.sh  ubuntu_install_llvm.sh
cuda_codegen/: main_test.cpp  nnfusion_rt.cu  nnfusion_rt.h  para_info.json
djx/: a.out  batch-mps.py  clog.py  contextSize-torch.py  contextsize.cu  cudnn.nvvp  device.cu  generate-final-schedule.py  getSize  getSize.cu  metrictry.nvvp  metrictry2.nvvp  mpstest.py  nvprof1.csv  resnet152cudnn.py  resnet50-v2-7.onnx  resnet50_source_code_cuda_base.txt  resnet50_source_code_cuda_base_opt0.txt  sm_eff12.csv  testlog.py  torch-diff-mps.py  try1.csv  try2.csv  tvm-cu-compile.py  tvm-generate-cuda-model.py  (+1 more)
djx/json2kernel/: 222copymain.cpp  CMakeLists.txt  copymain.cpp  copymodel.cpp  diymain.cpp  executor_base.cpp  executor_base.h  json.cpp  json.h  kernel.cpp  log.cpp  log.h  main.cpp  model.cpp  model.h  mpsmain.cpp  multimain.cpp  multiptbmain.cpp  ptbstream.cpp  resnet18-final.json  xianshipipemain.cpp
djx/json2kernel/resource/: Makefile  resnet18-final.json  resnet18.cu  resnet18.ptx  resnet18.schedule.json  resnet18_sm.ptx  resnet18copy.cu  tizuiyang.cu
djx/json2kernel/source32/: resnet18.graph.json
djx/json2kernel/sourceold/: changeszie.cu  resnet18.cu
djx/json2kernel/yydiy&old/: 222copymain.cpp  copymain.cpp  copymodel.h  diymain.cpp  diymodel.cpp  mpsmain.cpp  multimain.cpp  multiptbmain.cpp  parammedium.cpp  ptbstream.cpp
(+898 files in other folders)
